--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
             migrate -path /home/circleci/project/db/migrations -database ${DATABASE_URL} up
       - run:
           name: Run tests
-          command: gotestsum --junitfile junit.xml
+          command: gotestsum --junitfile junit.xml -- -p 1
       - store_test_results:
           path: junit.xml
   build:
